--- a/desafios/d010/android.html
+++ b/desafios/d010/android.html
@@ -148,8 +148,10 @@
 
     <footer>
 
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>. (Reaplicado pelo
-            aluno <a href="https://github.com/LelisGustavo" target="_blank">Gustavo Lélis</a>)</p>
+        <p>
+            Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>. (Reaplicado pelo
+            aluno <a href="https://github.com/LelisGustavo" target="_blank">Gustavo Lélis</a>)
+        </p>
 
     </footer>
 
