Atualização dos exercicios para o README

--- a/exercicios/ex016/cor02.html
+++ b/exercicios/ex016/cor02.html
@@ -11,10 +11,6 @@
 
     <style>
 
-        * {
-            height: 100%;
-        }
-
         body {
             background-image: linear-gradient(to bottom, #3198E2,#6D59C0, #B93590, #E33F5F, #FDD579);
             background-attachment: fixed;
@@ -27,6 +23,8 @@
 <body>
 
 <h1>Testando Gradiente</h1>
+
+<a href="index.html">Voltar</a>
     
 </body>
 
