--- a/exercicios/ex016/cor03.html
+++ b/exercicios/ex016/cor03.html
@@ -43,6 +43,8 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, at hic debitis suscipit sunt, quaerat mollitia veniam impedit possimus a temporibus ullam, ut ab sit amet nostrum minima voluptatem id.
         </p>
 
+        <a href="index.html">Voltar</a>
+
     </main>
 
 </body>
