--- a/exercicios/ex017/fonte01.html
+++ b/exercicios/ex017/fonte01.html
@@ -47,6 +47,8 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas molestias cumque culpa numquam consectetur laborum. Quo cupiditate, odit voluptatem optio vero nesciunt tempore architecto vel fugiat, earum quis dolorum culpa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, exercitationem! Sint voluptatum mollitia voluptate cumque non, aut exercitationem labore, inventore adipisci, neque beatae ut ea tenetur officia maxime totam. Totam?
     </p>
 
+    <a href="index.html">Voltar</a>
+
 </body>
 
 </html>
