--- a/exercicios/ex017/fonte02.html
+++ b/exercicios/ex017/fonte02.html
@@ -58,6 +58,8 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui ipsa, placeat dolorum provident rerum praesentium et alias repellendus aliquam, earum aliquid dignissimos, nulla fugiat consequuntur incidunt eaque fuga. Eveniet, nulla?Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, adipisci harum? Excepturi omnis ad similique tempore esse. Placeat ipsum eum soluta doloribus maiores excepturi eaque a voluptatum, facilis repudiandae. Modi.
     </p>
 
+    <a href="index.html">Voltar</a>
+
 </body>
 
 </html>
