--- a/exercicios/ex020/links.html
+++ b/exercicios/ex020/links.html
@@ -68,6 +68,8 @@
         <li><a href="https://www.cursoemvideo.com" target="_blank" class="especial">Site do CursoemVideo</a></li>
     </ul>
 
+    <a href="index.html">Voltar</a>
+
 </body>
 
 </html>
