--- a/exercicios/ex021/caixa01.html
+++ b/exercicios/ex021/caixa01.html
@@ -37,6 +37,8 @@
         Parágrafos também são exemplos de box-level, mas os <a href="#">links são exemplos de caixas inline-level</a>. Vamos ver como tudo isso funciona.
     </p>
 
+    <a href="index.html">Voltar</a>
+
 </body>
 
 </html>
