--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -38,6 +38,11 @@
 
         div#q4 {
             background-image: url('imagens/crash-running.gif');
+        } 
+         
+        a {
+            color: white;
+            font-size: 2em;
         }
 
     </style>
@@ -61,6 +66,8 @@
     <div class="quadrado" id="q4">
 
     </div>
+
+    <p><a href="index.html">Voltar</a></p>
 
 </body>
 
