--- a/exercicios/ex022/fundo007.html
+++ b/exercicios/ex022/fundo007.html
@@ -31,13 +31,19 @@
             transform: translate(-50%, -50%);
         }
 
+        a {
+            color: white;
+        }
+
     </style>
 
 </head>
 
 <body>
-    
+
     <section id="container">
+
+        <a href="index.html">Voltar</a>
 
         <article id="conteudo">
 
