--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -16,11 +16,17 @@
             background-repeat: no-repeat;
         }
 
+        a {
+            color: white;
+        }
+
     </style>
 
 </head>
 
 <body>
+
+    <a href="index.html">Voltar</a>
 
 </body>
 
