--- a/exercicios/ex022/fundo003.html
+++ b/exercicios/ex022/fundo003.html
@@ -35,11 +35,18 @@
             background-position: center center;
         }
 
+        a {
+            color: red;
+            font-size: 2em;
+        }
+
     </style>
 
 </head>
 
 <body>
+
+    <a href="index.html">Voltar</a>
     
     <div class="bloco" id="q1">
 
