--- a/exercicios/ex022/fundo004.html
+++ b/exercicios/ex022/fundo004.html
@@ -18,6 +18,11 @@
             background-size: 100px;
             background-repeat: no-repeat;
             background-position: center center;
+        } 
+
+        a {
+            color: red;
+            font-size: 2em;
         }
 
     </style>
@@ -25,6 +30,8 @@
 </head>
 
 <body>
+
+    <a href="index.html">Voltar</a>
 
 </body>
 
