--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -17,11 +17,18 @@
             background-position: center center;
         }
 
+        a {
+            color: red;
+            font-size: 2em;
+        }
+
     </style>
 
 </head>
 
 <body>
+
+    <a href="index.html">Voltar</a>
 
 </body>
 
