--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -38,11 +38,18 @@
             border-radius: 15px;
         }
 
+        a {
+            color: red;
+            font-size: 2em;
+        }
+
     </style>
 
 </head>
 
 <body>
+
+    <a href="index.html">Voltar</a>
 
     <main>
 
