Atualização dos links do README

--- a/exercicios/ex024/index.html
+++ b/exercicios/ex024/index.html
@@ -31,12 +31,15 @@
 
 <body>
 
-    <h1>Links para as 3 páginas do Ex021</h1>
+    <h1>Links para as 6 páginas do Ex024</h1>
 
-    <p>🗳️<a href="caixa01.html">Exemplo de Caixa 01</a>🗳️</p>
-    <p>🗳️<a href="caixa02.html">Exemplo de Caixa 02</a>🗳️</p>
-    <p>🗳️<a href="caixa03.html">Exemplo de Caixa 03</a>🗳️</p>
-
+    <p>📺<a href="iframe001.html">Exemplo de iframe 01</a>📺</p>
+    <p>📺<a href="iframe002.html">Exemplo de iframe 02</a>📺</p>
+    <p>📺<a href="iframe003.html">Exemplo de iframe 03</a>📺</p>
+    <p>📺<a href="iframe004.html">Exemplo de iframe 04</a>📺</p>
+    <p>📺<a href="iframe005.html">Exemplo de iframe 05</a>📺</p>
+    <p>📺<a href="iframe006.html">Exemplo de iframe 06</a>📺</p>
+    
 </body>
 
 </html>
