--- a/exercicios/ex026/index.html
+++ b/exercicios/ex026/index.html
@@ -31,12 +31,14 @@
 
 <body>
 
-    <h1>Links para as 3 páginas do Ex021</h1>
+    <h1>Links para as 5 páginas do Ex026</h1>
 
-    <p>🗳️<a href="caixa01.html">Exemplo de Caixa 01</a>🗳️</p>
-    <p>🗳️<a href="caixa02.html">Exemplo de Caixa 02</a>🗳️</p>
-    <p>🗳️<a href="caixa03.html">Exemplo de Caixa 03</a>🗳️</p>
-
+    <p>@<a href="mq001/index.html">Exemplo de Media Query 01</a>@</p>
+    <p>@<a href="mq002/index.html">Exemplo de Media Query 02</a>@</p>
+    <p>@<a href="mq003/index.html">Exemplo de Media Query 03</a>@</p>
+    <p>@<a href="mq004/index.html">Exemplo de Media Query 04</a>@</p>
+    <p>@<a href="mq005/index.html">Exemplo de Media Query 05</a>@</p>
+    
 </body>
 
 </html>
